@@ -1,9 +1,9 @@
 import java.io.IOException;
-import java.nio.file.Paths;
+import java.nio.file.Path;
 
 public class Main {
     public static void main(String[] args) throws IOException {
-        AplanarDirectorios aplanarDirectorios = new AplanarDirectorios(Paths.get("\\wsl.localhost\\kali-linux\\tmp\\niats"));
+        AplanarDirectorios aplanarDirectorios = new AplanarDirectorios(Path.of("C:/aTemporal/niats"));
         aplanarDirectorios.aplanar();
     }
 }
